crates/squealy/tests/compile_fail/explicit_insert_columns_reject_null_for_non_nullable.stderr
error[E0277]: the trait bound `Option<std::string::String>: squealy::IntoInsertAssignmentValue<RequiredRecordTitle>` is not satisfied
  --> tests/compile_fail/explicit_insert_columns_reject_null_for_non_nullable.rs:14:10
   |
14 |         .row((None::<String>,))
   |          ^^^ the trait `ExprKind` is not implemented for `Option<std::string::String>`
   |
   = help: the following other types implement trait `ExprKind`:
             AddExpr<L, R>
             AvgExpr<K>
             CountExpr<K>
             DivideExpr<L, R>
             MaxExpr<K>
             MinExpr<K>
             MultiplyExpr<L, R>
             Nullable<K>
           and $N others
   = note: required for `Option<std::string::String>` to implement `squealy::IntoInsertAssignmentValue<RequiredRecordTitle>`
   = note: required for `squealy::NonNullableColumn` to implement `squealy::IntoInsertColumnValue<RequiredRecordTitle, Option<std::string::String>>`
   = note: required for `(RequiredRecordTitle,)` to implement `squealy::InsertColumnValues<RequiredRecord<'_>, (Option<std::string::String>,)>`
